--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,42 @@ __pycache__
 *.yml
 /tutorial/yolov8/yolov8_cpp/implement/build/.vs/yolov8
 /.vs/RyzenAI-SW/v17
+/example/multi-model/build/src/util/my_util.dir/Release
+/example/multi-model/build/src/util/Release
+/example/multi-model/build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog
+/tutorial/getting_started_resnet/cpp/bin
+/tutorial/getting_started_resnet/cpp/build/.vs/resnet_cifar
+/tutorial/getting_started_resnet/modelcachekey
+/tutorial/getting_started_resnet/data/cifar-10-python.tar.gz
+/tutorial/getting_started_resnet/data/cifar-10-binary.tar.gz
+/tutorial/getting_started_resnet/DirectML.dll
+/tutorial/getting_started_resnet/onnxruntime.dll
+/tutorial/getting_started_resnet/onnxruntime_providers_shared.dll
+/tutorial/getting_started_resnet/onnxruntime_providers_vitisai.dll
+/tutorial/getting_started_resnet/onnxruntime_vitisai_ep.dll
+/tutorial/getting_started_resnet/resnet_cifar.exe
+/.vs
+/demo/multi-model-exec/bin
+/demo/multi-model-exec/npu_modelsx4_demo/resource
+/demo/multi-model-exec/npu_modelsx4_demo/configure.txt
+/demo/multi-model-exec/npu_modelsx4_demo/detection.avi
+/demo/multi-model-exec/npu_modelsx4_demo/face.avi
+/demo/multi-model-exec/npu_modelsx4_demo/passContext.txt
+/demo/multi-model-exec/npu_modelsx4_demo/to_video.py
+/example/multi-model/build/CMakeFiles/0073bec417195bd984cf3b82316502f8
+/example/multi-model/build/CMakeFiles/0a5567e40349c96287bfe2d1f7945fc6
+/example/multi-model/build/CMakeFiles/3.30.4/VCTargetsPath/x64/Debug
+/example/multi-model/build/CMakeFiles
+/example/multi-model/build/src/app/npu_multi_models.dir/Release
+/example/multi-model/build/src/app/CMakeFiles
+/example/multi-model/build/src/app/cmake_install.cmake
+/example/multi-model/build/src/app/INSTALL.vcxproj
+/example/multi-model/build/src/app/INSTALL.vcxproj.filters
+/example/multi-model/build/src/app/npu_multi_models.vcxproj
+/example/multi-model/build/src/app/npu_multi_models.vcxproj.filters
+/example/multi-model/build/x64/Release
+/tutorial/getting_started_resnet/cpp/build/ALL_BUILD/x64/Debug
+/tutorial/yolov8/yolov8_cpp/implement/build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/ZERO_CHECK.lastbuildstate
+/tutorial/yolov8/yolov8_cpp/implement/build/x64/Release/ZERO_CHECK
+/tutorial/yolov8/yolov8_cpp/implement/build/yolov8/camera_yolov8.dir/Release
+/tutorial/getting_started_resnet/cpp/build
