--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,6 @@ __pycache__
 /tutorial/yolov8/yolov8_cpp/implement/build/x64/Release/ZERO_CHECK
 /tutorial/yolov8/yolov8_cpp/implement/build/yolov8/camera_yolov8.dir/Release
 /tutorial/getting_started_resnet/cpp/build
+/tutorial/getting_started_resnet/csharp/NPUPOC/obj/Debug/net8.0
+/tutorial/getting_started_resnet/csharp/NPUPOC/obj
+/tutorial/getting_started_resnet/resnet_cifar.save.exe
