--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ __pycache__
 /tutorial/getting_started_resnet/csharp/NPUPOC/obj/Debug/net8.0
 /tutorial/getting_started_resnet/csharp/NPUPOC/obj
 /tutorial/getting_started_resnet/resnet_cifar.save.exe
+/tutorial/getting_started_resnet/csharp/NPUPOC/bin/Debug/net8.0
