--- a/tutorial/getting_started_resnet/csharp/NPUPOC/NPUPOC.csproj
+++ b/tutorial/getting_started_resnet/csharp/NPUPOC/NPUPOC.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Emgu.CV" Version="4.9.0.5494" />
+    <PackageReference Include="Emgu.CV.runtime.windows" Version="4.9.0.5494" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.19.2" />
   </ItemGroup>
 
